--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,12 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/social-circles.min.css }}">
+    <link rel="stylesheet" href="{{ '/assets/css/social-circles.css }}">
+    <style>
+			.social-button.borderless {
+				padding: 0 16px;
+			}
+		</style>
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -28,8 +33,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <li><a class="icon-facebook social-button color" href="http://facebook.com/username"></a></li>
-      
+      <a class="icon-facebook social-button color" href="http://facebook.com/username"></a>
+      <a class="icon-facebook social-button grey" href="http://facebook.com/username"></a>
+      <a class="icon-facebook social-button borderless" href="http://facebook.com/username"></a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
