--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a class="icon-facebook social-button color" href="http://facebook.com/username"></a>
+      <a class="icon-facebook social-button color" href="http://facebook.com/username">facebook</a>
       <a class="icon-facebook social-button grey" href="http://facebook.com/username"></a>
       <a class="icon-facebook social-button borderless" href="http://facebook.com/username"></a>
       {% if site.github.is_project_page %}
