--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,17 +22,27 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="../../assets/css/social-circles.css">
     <style>
-        .social-button.borderless {
-            padding: 0 16px;
-        }
+	ol {
+	    list-style-type: none;
+	    padding: 0;margin: 0;
+	}
+	ol li {
+	    display: inline-block;
+	    margin: 4px;
+	}
+	.social-button.borderless {
+	    padding: 0 16px;
+	}
     </style>
   </head>
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a class="icon-linkedin social-button borderless" href="https://www.linkedin.com/in/lisa4930007/"></a>
-		  <a class="icon-github social-button borderless" href="http://github.com/lisa4930007"></a>
+      <ol>
+	<li><a class="icon-linkedin social-button borderless" href="https://www.linkedin.com/in/lisa4930007/"></a></li>
+	<li><a class="icon-github social-button borderless" href="http://github.com/lisa4930007"></a></li>
+      </ol>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
