--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <ol>
-	<li><a class="icon-linkedin social-button borderless" href="https://www.linkedin.com/in/lisa4930007/"></a></li>
-	<li><a class="icon-github social-button borderless" href="http://github.com/lisa4930007"></a></li>
+	<li><a class="icon-linkedin social-button color" href="https://www.linkedin.com/in/lisa4930007/"></a></li>
+	<li><a class="icon-github social-button color" href="http://github.com/lisa4930007"></a></li>
       </ol>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
