--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,8 @@
   </head>
   <body>
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ default: site.description | default: site.github.project_tagline }}</h2>
+      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 	<a class="icon-linkedin social-button color" href="https://www.linkedin.com/in/lisa4930007/"></a>
 	<a class="icon-github social-button color" href="http://github.com/lisa4930007"></a>
       {% if site.github.is_project_page %}
